apps/monitoring/prometheus/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-dashboard-https
  namespace: monitoring
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: prometheus-dashboard-https
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.powell.place`)
      kind: Rule
      services:
        - name: monitor-prometheus
          port: http-web
      middlewares:
        - name: traefik-forward-auth
          namespace: kube-system
        - name: security
          namespace: kube-system
